<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.cardapp.customization.CustomizationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/settingBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:onClick="@{() -> viewModel.changeBackground()}"
            android:scaleType="centerCrop"
            app:backgroundPath="@{viewModel.model.backgroundName}"
            app:source="@{viewModel.backgroundSource}" />

        <TextView
            android:id="@+id/field_name_text"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/field_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_name_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_name_edit"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/field_name_edit"
                android:inputType="textPersonName"
                android:text="@{viewModel.model.name}" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView2"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/field_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_name_edit" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_title_edit"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/field_title_edit"
                android:inputType="textPersonName"
                android:text="@{viewModel.model.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/field_text_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_title_edit" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_text_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_text_edit"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/field_text_edit"
                android:inputType="textPersonName"
                android:text="@{viewModel.model.name}" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/extra_big_margin"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="@+id/wrapper_text_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wrapper_name_edit"
            app:srcCompat="@drawable/apple" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_test"
            style="@style/custom_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:background="@drawable/gradient_button"
            android:text="@string/test_button"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_text_edit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_launch"
            style="@style/custom_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/custom_button"
            android:text="@string/launch_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_test" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/large_size"
            android:layout_height="@dimen/large_size"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_launch"
            app:imagePath="@{viewModel.model.itemName}"
            app:source="@{viewModel.itemSource}"
            tools:src="@drawable/apple" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/item_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="@{() -> viewModel.prevItem()}"
            android:src="@drawable/arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/item_image"
            app:layout_constraintEnd_toStartOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_image" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/item_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="@{() -> viewModel.nextItem()}"
            android:src="@drawable/arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/item_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            app:layout_constraintTop_toTopOf="@+id/item_image" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pattern_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/arrow_left_small"
            app:layout_constraintBottom_toBottomOf="@+id/container"
            app:layout_constraintEnd_toStartOf="@+id/container"
            app:layout_constraintTop_toTopOf="@+id/container" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pattern_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/arrow_right_small"
            app:layout_constraintBottom_toBottomOf="@+id/container"
            app:layout_constraintStart_toEndOf="@+id/container"
            app:layout_constraintTop_toTopOf="@+id/container" />


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"

            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_image">

            <ImageView
                android:id="@+id/pattern_image"
                android:layout_width="270dp"
                android:layout_height="130dp"
                android:contentDescription="@string/image_item"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/pattern_title"
                style="@style/text_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="title" />

            <TextView
                android:id="@+id/pattern_text"
                style="@style/text_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:text="uhawgfkaw iuaw uiwah e" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>